# newton

./: .gitignore  racecar_callback_log.npz  racecar_picard_log.npz
examples/robot/: example_robot_racecar_newton_callback.py
newton/_src/solvers/mujoco/: solver_mujoco.py
newton/_src/vehicle/: __init__.py  mujoco_anti_roll_bar_module.py  mujoco_spring_damper_module.py
newton/_src/vehicle/tires/: __init__.py  disc_terrain_collision.py  fiala_tire.py  mujoco_tire_module.py
newton/examples/robot/: example_robot_racecar.py  example_robot_racecar_ctrlcb.py  example_robot_racecar_ctrlcb_constant.py  example_robot_racecar_newton.py  example_robot_racecar_newton_callback.py  example_robot_racecar_picard.py  example_robot_racecar_picard_plot.py
newton/tests/tires/: chrono_gt.py  doc_substep0_chrono_ground_truth.tex  doc_substep1_conventions.tex  doc_substep2_static_fiala_math.tex  doc_substep3_collision_pipeline.tex  doc_substep4_mujoco_warp_integration.tex  doc_substep5_tire_test_rig.tex  test_disc_terrain_collision.py  test_fiala_math.py  test_mujoco_tire_integration.py  test_tire_test_rig.py
newton/tests/tires/chrono_gt/: CMakeLists.txt  README.md  newton_chrono_gt.cpp
newton/tests/vehicles/: test_mujoco_anti_roll_bar_module.py  test_mujoco_spring_damper_module.py
newton/tools/: inspect_vehicle.py
